<resources>
    <string name="app_name">Chowzy</string>
    <string name="institut_teknologi_sepuluh_nopember">Institut Teknologi Sepuluh Nopember</string>
    <string name="my_name">Daud Dhiya\' Rozaan</string>
    <string name="hi_daud">Hi, Daud!</string>
    <string name="what_you_gonna_eat_this_day">What you gonna eat this day?</string>
    <string name="banner_title">Solo Culinary</string>
    <string name="banner_desc">Up to 50% Discount</string>
    <string name="text_catalogue_header">Menu List</string>
    <string name="location_title">Location</string>
    <string name="menu_name_placeholder">Menu Name</string>
    <string name="menu_price_placeholder">Rp 10.000,-</string>
    <string name="menu_desc_placeholder">Menu Description</string>
    <string name="text_add_to_cart_btn_placeholder">Add to Cart - Rp 0.00</string>
    <string name="text_counter_placeholder">0</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">Cart</string>
    <string name="title_tab_profile">Profile</string>
    <string name="add_to_cart_btn">Add to Cart - %1$s</string>
    <string name="text_successfully_add_to_cart">Successfully Add to Cart</string>
    <string name="text_failed_add_to_cart">Failed Add to Cart</string>
    <string name="text_profile_header">Profile</string>
    <string name="text_label_name">Name</string>
    <string name="text_label_username">Username</string>
    <string name="text_label_email">Email</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="text_hint_notes">Add Notes</string>
    <string name="total_quantity">x%s</string>
    <string name="text_cart_header">Your Cart</string>
    <string name="text_title_order_confirmation">Order Confirmation</string>
    <string name="text_label_total_price">Total Price</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_delivery_method">Delivery Method</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cod">COD</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="text_order_summary">Order Summary</string>
    <string name="failed_to_checkout">Failed to Checkout</string>
    <string name="text_payment_success">Payment Success</string>
    <string name="text_back_to_home">Back to Home</string>
    <string name="title_input_name_user">Name</string>
    <string name="name_user">Daud Dhiya\'</string>
    <string name="title_password_input_profile">Password</string>
    <string name="password">admin123</string>
    <string name="title_email_input_profile">Email</string>
    <string name="email">youremail@gmail.com</string>
    <string name="title_telephone_number_input_profile">Telephone Number</string>
    <string name="email_hint">youremail@gmail.com</string>
    <string name="password_hint">*********</string>
    <string name="name_hint">Your Name</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="have_an_account">Have an account?</string>
    <string name="welcome">Welcome!</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">Register Failed</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="logout">Logout</string>
    <string name="hi_name">Hi, %1$s!</string>
    <string name="hi_guest">Hi, Guest!</string>
    <string name="profile_title">Profile</string>
</resources>