<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_input_name_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_register_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_selector_input"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_email_input_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_register_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_selector_input"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_password_input_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_register_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_selector_input"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="8dp"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_title_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_confirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_register_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_register_password_confirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_confirm_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_confirm_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_selector_input"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="8dp"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_register_password_confirmation" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register">

        <TextView
            android:id="@+id/tv_have_account_quest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/login"
            android:textColor="?attr/colorPrimary" />

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pb_register"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toTopOf="@+id/btn_register"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>