<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp">

        <include
            android:id="@+id/layout_profile_top_bar"
            layout="@layout/layout_profile_top_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginVertical="32dp"
            android:src="@drawable/ic_tab_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_profile_top_bar" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_edit_photo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="?attr/colorBackgroundFloating"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user"
            app:layout_constraintEnd_toEndOf="@+id/iv_user"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <TextView
            android:id="@+id/tv_title_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/title_input_name_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_user" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_selector_input"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:padding="12dp"
                android:text="@string/name_user"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_title_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_email_input_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_selector_input"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:text="@string/email"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/logout"
            android:backgroundTint="?attr/colorError"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>